--- a/src/style.css
+++ b/src/style.css
@@ -1,118 +1,139 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
 
-:root {
-    --font-family: 'inter', sans-serif;
-    --cor-principal:#0a6e71;
+:root{
+    --corprincipal: #c7e6ff;
+    --corsecundaria:#caf9ff;
+    --cortitulo:#8f58e7;
+}
+
+body{
+    background: var(--corsecundaria);
+
 }
 
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 
-body{
-    background-color: #f3f5fc;
+
+.cabecalho{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    padding: 2%;
+}
+
+.cabecalho h1{
+    color: var(--cortitulo);
+}
+
+.cabecalho img{
+    max-width:70px;
+    max-height:70px;
+    width: auto;
+    height: auto;
     
 }
 
-header{
-    padding: 2.5rem;
-    background-color: #080808;
-    margin-bottom: 20px;
-}
-
-.logo{
-    height: 60px;
-    border-radius: 20px;
-}
-main{
+.container-input{
     display: flex;
-    margin-bottom: 50px;
-    margin-left: 80px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    padding: 2% 0 0 4%;
 }
 
-textarea.input, textarea.mensagem{
-    display: flex;
-    width: 480px;
-    height: 300px;
-    background-color: transparent;
-    resize: none;
-    font-family: var(--font-family);
-    font-size: 1rem;
-    color: var(--cor-principal);
-    
+.container-input .input{
+    width: 400px;
+    height: 330px;
 }
 
-textarea.input::placeholder,textarea.mensagem::placeholder{
-    color:  var(--cor-principal);
-    font-family: var(--font-family);
-    font-size: 1rem;
-    outline: none;
-}
-
-.mensagem{
+#input-texto{
+    width: 345px;
+    height: 330px;
+    font-size: 20px;
+    color: var(--cortitulo);
+    background: transparent;
+    box-shadow: none;
     border: none;
-    background-color: #f3f5fc;
-    background-image:url(./img/pinguim.png);
-    background-repeat: no-repeat;
-    margin-top: 50px;
-    padding-left: 20px;
+    resize: none;
+    outline: 0;
+    padding: 10px;
+    text-transform: uppercase;
+}
+    
+
+#output{
+    display: flex;
+    flex-direction: column;
+    border: 3px solid var(--cortitulo);
+    border-radius: 20px;
+    width: 350px;
+    height: 400px;
+    margin-right: 3%;
+}
+
+#output h2{
+    text-align: center;
+    font-size: 25px;
+    color: var(--cortitulo);
+}
+
+#output span{
+    font-size: 16px;
+    text-align: center;
+}
+
+#output img{
+    max-width:280px;
+    max-height:280px;
+    width: auto;
+    height: auto;
+    margin-top: 4%;
+    padding-left: 30px;
     
 }
 
-.alert {
+.container-bnt button{
+    border: 2px solid var(--cortitulo);
+    border-radius: 10px;
+    text-decoration: none;
+    color: #4f017c;
+    width: 150px;
+    height: 50px;
+    margin-left: 4%;
+    cursor: pointer;
+}
+
+.btn-copiar{
+    border: 2px solid var(--cortitulo);
+    border-radius: 10px;
+    text-decoration: none;
+    color: #4f017c;
+    width: 150px;
+    height: 50px;
+    margin-bottom: 10%;
+    margin-left: 30%;
+    cursor: pointer;
+}
+
+.container-bnt button:hover{
+   border: 2px solid var(--corsecundaria);
+   transition: 0.5s all;
+}
+
+.rodape{
     display: flex;
-    flex-direction: row;
-    margin-left: 13rem;
-    align-items: center; 
-    gap:8px;
-    color:#495057;
-    font-family: var(--font-family);
-    font-size: 0.75rem;
-   
-}
-
-.botoes{
-    display: flex;
-    margin-top: 2rem;
-    gap: 24px;
-}
-
-button{
-    padding: 1.5rem;
-    border-radius: 1.5rem;
-    width:200px;
-    height: 60px;
-    font-family: var(--font-family);
-    font-size: 1rem;
-   
-}
-
-.descriptografar,.criptografar,.copiar{
-    color: var(--cor-principal);
-    background-color:#D8DFE8;
-    border:1px solid var(--cor-principal); 
-}
-
-.copiar{
-    margin-top: 2rem;
-    margin-left: 8rem;
-}
-
-button:hover{
-    background-color: #4f92a7;
-    color: #ffffff;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+    margin-top: 15px ;
+    background:var(--corprincipal) ;
+    color: var(--cortitulo);
 }
 
 footer{
     
-    background-color: #4f92a7;
+    background-color: #4f017c;
     text-align: center;
     color: #ffffff;
     padding: 5px 0;
